<resources>
    <string name="app_name">Coin Catch</string>
    <string name="botonplay">PLAY</string>
    <string name="botonsta">STATISTICS</string>
    <string name="monedas">Captured Coins:</string>
    <string name="terminar">Finish</string>
    <string name="repetir">Repeat</string>
    <string name="plantarse">STOP</string>
    <string name="puntuacion">SCORE</string>
    <string name="anonimo">Anonimous</string>
    <string name="info">HOW TO PLAY?</string>
    <string name="change">CHANGE NICKNAME</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="dialogo">
        Hi cadet. You are here because I need your help to carry out an important mission. Your objective is to find
        as many coins as possible, but be careful, the meteorites and the black holes will make your mission more difficult. If
        you find the rockets, you will be lucky, your earnings will double. If you run into with the moon, keep calm, it is only
        as a spectator. Ah, and remember, when you want, you can give up the game and you can take all the coins
        found, Good luck, you are going to need it.
    </string>
    <string name="mision">I understand the mission</string>
    <string name="hard">Hard</string>
    <string name="normal">Normal</string>
    <string name="easy">Easy</string>
</resources>
