<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/cielo">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"/>



    <Button
        android:id="@+id/jugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonplay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/estadisticas"
        android:textColor="#000"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintBottom_toTopOf="@id/info"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        />


    <Button
        android:id="@+id/estadisticas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonsta"
        app:layout_constraintLeft_toRightOf="@id/jugar"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#000"
        android:layout_marginTop="5dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/chNickname"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintVertical_chainStyle="spread"
        />

    <Button
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/chNickname"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/jugar"
        />

    <Button
        android:id="@+id/chNickname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintLeft_toRightOf="@id/info"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/estadisticas"
        />

    <ImageButton
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/efectos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_efectos"
        android:tint="#fff"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/musica"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/efectos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_musica"
        android:tint="#fff"
        android:background="@android:color/transparent"/>


</androidx.constraintlayout.widget.ConstraintLayout>