<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button

        android:id="@+id/facil"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        android:background="#5564eb"
        android:textColor="#fff"

        android:textSize="20sp"
        android:text="@string/easy"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/normal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/normal"
        android:padding="20dp"
        android:textSize="20sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#094293"
        android:textColor="#fff"

        android:text="@string/normal"
        app:layout_constraintTop_toBottomOf="@id/facil"
        app:layout_constraintBottom_toTopOf="@id/dificil"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/dificil"
        android:padding="20dp"
        android:textSize="20sp"
        android:background="#4c2882"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/hard"
        android:textColor="#fff"

        app:layout_constraintTop_toBottomOf="@id/normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>