<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity"
    android:background="@drawable/cielo">

    <RadioGroup
        android:id="@+id/radiogroup"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rFacil"
            android:text="@string/easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:textSize="30sp"
            android:textColor="#fff"
            android:buttonTint="@color/white"/>

        <RadioButton
            android:id="@+id/rNormal"
            android:text="@string/normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:textSize="30sp"
            android:textColor="#fff"
            android:buttonTint="@color/white"/>

        <RadioButton
            android:id="@+id/rDificil"
            android:text="@string/hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:textSize="30sp"
            android:textColor="#fff"
            android:buttonTint="@color/white"/>
    </RadioGroup>


    <TextView
        android:id="@+id/titNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogroup"
        app:layout_constraintRight_toLeftOf="@id/titPoint"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="NICKNAME"/>

    <TextView
        android:id="@+id/titPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogroup"
        app:layout_constraintLeft_toRightOf="@id/titNickname"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/puntuacion"/>

    <ListView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/titNickname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>