<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cielo">

    <ImageView
        android:id="@+id/alien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/alien"/>

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/alien"
        android:textSize="30sp"
        android:text="NICKNAME:"
        app:layout_constraintTop_toTopOf="@id/alien"
        android:textColor="#fff"/>


    <TextView
        android:id="@+id/mostrarMonedas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="30sp"
        android:text="@string/monedas"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toRightOf="@id/alien"
        app:layout_constraintTop_toBottomOf="@id/nickname"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/terminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/alien"
        app:layout_constraintRight_toLeftOf="@id/repetir"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        android:text="@string/terminar"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <Button
        android:id="@+id/repetir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/repetir"
        app:layout_constraintLeft_toRightOf="@id/terminar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>